welcome.lessons.welcome.bat.bool2.AnswerCell.scala.error
answerCell:12: error: ';' expected but 'true' found.
    retrun true
           ^