welcome.lessons.welcome.bat.bool2.AnswerCell.scala.code
def answerCell(isMorning:Boolean, isMom:Boolean, isAsleep:Boolean):Boolean = {
  if(isMorning== true && isMom==true && isAsleep==false){
    return true
  }
  else if (isMorning== true && isMom==false){
    return false
  }
  else if ( isAsleep== true){
    return false
  }
  else {
    retrun true
  }
  
}